# shellboard

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
scripts/: make-macos-icon.mjs  release-linux.sh  release.sh
scripts/docker/: Dockerfile.linux
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs
src/components/: AboutDialog.css  AboutDialog.tsx  AddProjectFlow.tsx  ColorPicker.css  ColorPicker.tsx  CommandPalette.css  CommandPalette.tsx  ContextMenu.css  ContextMenu.tsx  ErrorBoundary.css  ErrorBoundary.tsx  GlobalSearch.css  GlobalSearch.tsx  GroupHeader.tsx  Modal.css  Modal.tsx  MosaicTab.css  MosaicTab.tsx  ProjectList.tsx  ProjectRow.tsx  SettingsDialog.css  SettingsDialog.tsx  ShortcutsDialog.css  ShortcutsDialog.tsx  Sidebar.css  Sidebar.tsx  SnippetsDialog.css  SnippetsDialog.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  Terminal.tsx  TerminalHost.tsx
src/store/: appStore.ts
src/utils/: mosaic.ts  path.ts  persistence.ts  sessionSerialize.ts  terminalRegistry.ts  themes.ts  updateCheck.ts
