[package]
name = "shellboard"
version = "1.3.0"
description = "Cross-platform terminal with per-project tabs & splits"
authors = ["Petr Hložek <petr@petrhlozek.cz>"]
edition = "2024"

[lib]
name = "shellboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
which = "6"
